force-app/main/default/objects/Contact/fields/AccreditationEndorsorRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>AccreditationEndorsorRenewalDate__c</fullName>
    <description>If this is filled in, it indicates that the person is currently an endorser but will losing endorsing privileges if this date lapses!</description>
    <label>Accreditation Endorsor Renewal Date</label>
    <type>Date</type>
</CustomField>