force-app/main/default/objects/Contact/fields/AdvisorRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>AdvisorRenewalDate__c</fullName>
    <description>The date the advisor is supposed to renew in order to be in good standing!</description>
    <label>Advisor Renewal Date</label>
    <type>Date</type>
</CustomField>