force-app/main/default/objects/Contact/fields/AspireId__c.field-meta.xml
<CustomField>
    <fullName>AspireId__c</fullName>
    <description>This is an accreditation id used by NY to look up certification holders</description>
    <externalId>true</externalId>
    <label>Aspire Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>