force-app/main/default/objects/Contact/fields/Credentialed_Certificate_No__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Certificate_No__c</fullName>
    <label>Credentialed Certificate #:</label>
    <length>50</length>
    <type>Text</type>
</CustomField>