force-app/main/default/objects/Contact/fields/Credentialed_Certificate_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Credentialed_Certificate_Renewal_Date__c</fullName>
    <label>Credentialed Certificate Renewal Date</label>
    <type>Date</type>
</CustomField>