force-app/main/default/objects/Contact/fields/etap_EntityRefId__c.field-meta.xml
<CustomField>
    <fullName>etap_EntityRefId__c</fullName>
    <description>This is an external id that comes from blackbaud etapestry system. This id comes from the entity object and is related to the entity ref id</description>
    <externalId>true</externalId>
    <inlineHelpText>This is an external id that comes from blackbaud etapestry system. This id comes from the entity object and is related to the entity ref id</inlineHelpText>
    <label>etap_Entity Ref Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>