force-app/main/default/objects/Contact/fields/etap_EntityRoleRefId__c.field-meta.xml
<CustomField>
    <fullName>etap_EntityRoleRefId__c</fullName>
    <description>This is another external id used by etapestry for connecting various data points together on the contact. Used for journal entries and attachments, for example</description>
    <externalId>true</externalId>
    <inlineHelpText>This is another external id used by etapestry for connecting various data points together on the contact. Used for journal entries and attachments, for example</inlineHelpText>
    <label>etap_Entity Role Ref Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>