force-app/main/default/objects/Contact/fields/etap_JournalNoteDate__c.field-meta.xml
<CustomField>
    <fullName>etap_JournalNoteDate__c</fullName>
    <description>This is the date of the journal note from e-tapestry. Notes will be stored in the description of the contact</description>
    <inlineHelpText>This is the date of the journal note from e-tapestry. Notes will be stored in the description of the contact</inlineHelpText>
    <label>etap_Journal Note Date</label>
    <type>Date</type>
</CustomField>