force-app/main/default/objects/Contact/fields/HOSTAgencyLead__c.field-meta.xml
<CustomField>
    <fullName>HOSTAgencyLead__c</fullName>
    <description>Is this person a HOST agency lead?</description>
    <label>HOST Agency Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>