force-app/main/default/objects/Contact/fields/Listserv__c.field-meta.xml
<CustomField>
    <fullName>Listserv__c</fullName>
    <label>Listserv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Statewide Network</fullName>
            </value>
            <value>
                <fullName>ASNWNY</fullName>
            </value>
            <value>
                <fullName>CRELO</fullName>
            </value>
            <value>
                <fullName>DYSON</fullName>
            </value>
            <value>
                <fullName>ELNOST</fullName>
            </value>
            <value>
                <fullName>HOST</fullName>
            </value>
            <value>
                <fullName>HVAN</fullName>
            </value>
            <value>
                <fullName>STEM</fullName>
            </value>
            <value>
                <fullName>LIPASE</fullName>
            </value>
            <value>
                <fullName>NCAN</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>OOST</fullName>
            </value>
            <value>
                <fullName>Syracuse</fullName>
            </value>
            <value>
                <fullName>MOST</fullName>
            </value>
            <value>
                <fullName>Power of 3</fullName>
            </value>
            <value>
                <fullName>GRASA</fullName>
            </value>
            <value>
                <fullName>Broome &amp; Tioga</fullName>
            </value>
            <value>
                <fullName>Nassau</fullName>
            </value>
            <value>
                <fullName>Wilson</fullName>
            </value>
            <value>
                <fullName>Chautauqua</fullName>
            </value>
            <value>
                <fullName>Afterschool Policy Updates - Legislator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>