force-app/main/default/objects/Contact/fields/MembershipRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>MembershipRenewalDate__c</fullName>
    <description>Date membership is renewed</description>
    <inlineHelpText>Date membership is renewed</inlineHelpText>
    <label>Membership Renewal Date</label>
    <type>Date</type>
</CustomField>