force-app/main/default/objects/Contact/fields/MembershipStatus__c.field-meta.xml
<CustomField>
    <fullName>MembershipStatus__c</fullName>
    <description>This represents the status of the member - are the active, inactive, renewed, etc</description>
    <inlineHelpText>This represents the status of the member - are the active, inactive, renewed, etc</inlineHelpText>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>