force-app/main/default/objects/Contact/fields/My_program_is_funded__c.field-meta.xml
<CustomField>
    <fullName>My_program_is_funded__c</fullName>
    <label>My program is funded:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>