force-app/main/default/objects/Contact/fields/of_children_enrolled_in_your_program__c.field-meta.xml
<CustomField>
    <fullName>of_children_enrolled_in_your_program__c</fullName>
    <label># of children enrolled in your program:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>