force-app/main/default/objects/Contact/fields/OriginalCredentialedCertificationDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalCredentialedCertificationDate__c</fullName>
    <description>The date of original certification</description>
    <label>Original Credentialed Certification Date</label>
    <type>Date</type>
</CustomField>