force-app/main/default/objects/Contact/fields/Regional_Network__c.field-meta.xml
<CustomField>
    <fullName>Regional_Network__c</fullName>
    <label>Regional Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASWNY</fullName>
            </value>
            <value>
                <fullName>CRELO</fullName>
            </value>
            <value>
                <fullName>ELN of Broome &amp; Tioga</fullName>
            </value>
            <value>
                <fullName>Dyson</fullName>
            </value>
            <value>
                <fullName>ELNOST</fullName>
            </value>
            <value>
                <fullName>GRASA</fullName>
            </value>
            <value>
                <fullName>Co-HOST</fullName>
            </value>
            <value>
                <fullName>HVAN</fullName>
            </value>
            <value>
                <fullName>NCAN</fullName>
            </value>
            <value>
                <fullName>NYC</fullName>
            </value>
            <value>
                <fullName>Syracuse</fullName>
            </value>
            <value>
                <fullName>Oswego</fullName>
            </value>
            <value>
                <fullName>LI</fullName>
            </value>
            <value>
                <fullName>Wayne</fullName>
            </value>
            <value>
                <fullName>MOST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>