force-app/main/default/objects/Contact/fields/SACAdvisorRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>SACAdvisorRenewalDate__c</fullName>
    <description>Date when SAC advisor renewal is due!</description>
    <label>SAC Advisor Renewal Date</label>
    <type>Date</type>
</CustomField>