force-app/main/default/objects/Contact/fields/SACCredentialInstructorRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>SACCredentialInstructorRenewalDate__c</fullName>
    <description>If this is filled in, this means that the SAC credentialled instructor is current and their renewal date is what is listed here</description>
    <label>SAC Credential Instructor Renewal Date</label>
    <type>Date</type>
</CustomField>