force-app/main/default/objects/Contact/fields/SACEndorserRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>SACEndorserRenewalDate__c</fullName>
    <description>Date when SAC endorser renewal is due!</description>
    <label>SAC Endorser Renewal Date</label>
    <type>Date</type>
</CustomField>