force-app/main/default/objects/Contact/fields/summit__Created_with_Summit_Events__c.field-meta.xml
<CustomField>
    <fullName>summit__Created_with_Summit_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created with Summit Events</label>
    <type>Checkbox</type>
</CustomField>