force-app/main/default/objects/Contact/fields/What_is_your_highest_level_of_education__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_highest_level_of_education__c</fullName>
    <label>What is your highest level of education?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>