force-app/main/default/objects/Contact/recordTypes/eTapestry_Contact.recordType-meta.xml
<RecordType>
    <fullName>eTapestry_Contact</fullName>
    <active>true</active>
    <label>eTapestry Contact</label>
</RecordType>